Updated index.html, script.js, and schema for new case study format

--- a/ux-portfolio/frontend/index.html
+++ b/ux-portfolio/frontend/index.html
@@ -6,7 +6,7 @@
     <title>Fredrik Storheil - UX Portfolio</title>
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
-<body>
+<body class="index-page">
 
     <!-- Skip link for keyboard users -->
     <a href="#main-content" class="skip-link">Skip to main content</a>
