--- a/ux-portfolio/frontend/html/index.html
+++ b/ux-portfolio/frontend/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fredrik Storheil - UX Portfolio</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body class="index-page">
 
@@ -35,6 +35,7 @@
         <div class="about-container"></div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="../js/utils.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 </html>
