Update file paths in case-study.html for correct resource linking

--- a/case-study.html
+++ b/case-study.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Case Study</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="./ux-portfolio/frontend/CSS/styles.css">
 </head>
 <body class="case-study-page">
 
@@ -19,8 +19,8 @@
         </section>
     </main>
 
-    <script src="../js/utils.js"></script>
-    <script src="../js/case-study.js"></script>
+    <script src="./ux-portfolio/frontend/js/utils.js"></script>
+    <script src="./ux-portfolio/frontend/js/case-study.js"></script>
 
 </body>
 </html>
