Add logo and update header layout in index.html; enhance styles in components.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fredrik Storheil - Produktdesigner</title>
+    <link rel="icon" type="image/svg" href="./ux-portfolio/frontend/assets/logo.svg" />
     <link rel="stylesheet" href="./ux-portfolio/frontend/CSS/styles.css" />
   </head>
   <body class="index-page">
@@ -11,8 +12,9 @@
     <a href="#main-content" class="skip-link">Skip to main content</a>
 
     <header role="banner">
-      <div>
-        <h1>Fredrik Storheil</h1>
+      <div class="logo-title">
+        <img src="./ux-portfolio/frontend/assets/logo.svg" alt="Storheil Design logo" class="logo" />
+        <h1>Storheil Design</h1>
       </div>
     </header>
 
