Update hero section text for clarity and adjust light text color for better contrast

--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
 
     <main id="main-content" role="main">
       <section class="hero">
-        <h1>Jeg er en digital designer som gjør det vanskelige lett</h1>
+        <h1>Jeg er en designer som gjør det vanskelige lett</h1>
         <p>
-          Hei, mitt navn er Fredrik Storheil. Gjennom innsikt, empati og design
-          skaper jeg brukervennlige løsninger som forenkler hverdagen,
-          effektiviserer systemer og forbedrer opplevelsen - for mennesker, team
-          og organisasjoner.
+          Hei! Jeg er Fredrik – multidisiplinær designer med forkjærlighet for både det visuelle og det tekniske.
+          Jeg har lært at form og funksjon må spille på lag.
+Når det ser bra ut og fungerer sømløst, skapes løsninger folk faktisk vil bruke.
         </p>
         <p>
-          Jeg er er en multidisiplinær designer med erfaring innen: grafisk
+          Jeg har erfaring innen: grafisk
           design, interaksjonsdesign, UX-design, produktdesign og
           frontend-utvikling.
         </p>
