Add page container for layout consistency and improve hero section text formatting

--- a/case-study.html
+++ b/case-study.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./ux-portfolio/frontend/CSS/styles.css">
 </head>
 <body class="case-study-page">
+    <div class="page-container">
 
     <header>
         <h1>Case Study</h1>
@@ -21,6 +22,6 @@
 
     <script src="./ux-portfolio/frontend/js/utils.js"></script>
     <script src="./ux-portfolio/frontend/js/case-study.js"></script>
-
+</div>
 </body>
 </html>
