--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./ux-portfolio/frontend/CSS/styles.css" />
   </head>
   <body class="index-page">
+    <div class ="page-container">
     <!-- Skip link for keyboard users -->
     <a href="#main-content" class="skip-link">Skip to main content</a>
 
@@ -32,7 +33,7 @@
 
     <main id="main-content" role="main">
       <section class="hero">
-        <h1>Jeg er en designer som gjør det vanskelige lett</h1>
+        <h1>Jeg er en designer <br>som gjør det vanskelige lett</h1>
         <p>
           Hei! Jeg er Fredrik – multidisiplinær designer med forkjærlighet for både det visuelle og det tekniske.
           Jeg har lært at form og funksjon må spille på lag.
@@ -86,5 +87,6 @@ Når det ser bra ut og fungerer sømløst, skapes løsninger folk faktisk vil br
 
     <script src="./ux-portfolio/frontend/js/utils.js"></script>
     <script src="./ux-portfolio/frontend/js/index.js"></script>
+  </div>
   </body>
 </html>
