Add process image gallery to case study and improve layout styles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             alt="Storheil Design logo"
             class="logo"
           />
-          <h1>Storheil Design</h1>
+          <h1 id="header-title">Storheil Design</h1>
         </div>
       </header>
 
