Update case study page with dynamic title and localized navigation; enhance gallery functionality and styling

--- a/case-study.html
+++ b/case-study.html
@@ -10,8 +10,8 @@
     <div class="page-container">
 
     <header>
-        <h1>Case Study</h1>
-        <a href="index.html">Back to Home</a>
+        <h1 id="case-title-header"></h1>
+        <a href="index.html">Tilbake til start</a>
     </header>
 
     <main id="main-content">
