Refactor HTML content for improved readability and structure in the main section

--- a/index.html
+++ b/index.html
@@ -56,24 +56,32 @@
           erfaring som grafisk designer og mer enn 3 år innen UX-design,
           kombinerer jeg kreativitet, struktur og teknologiforståelse for å
           utvikle digitale løsninger som faktisk fungerer – både for brukerne og
-          for virksomheten. Jeg brenner for å gjøre komplekse systemer enkle å
-          bruke, og skaper digitale produkter som er tilgjengelige, meningsfulle
-          og teknisk gjennomførbare. Enten jeg designer et dashboardsystem for
-          investorer, en app for utfordringsbaserte konkurranser, eller en
-          nettside for en startup, jobber jeg alltid helhetlig: fra innsikt og
-          konseptutvikling, til skisser, prototyper og implementering i kode.
-          Jeg har erfaring fra både offentlig og privat sektor, inkludert
+          for virksomheten.
+        </p>
+        <p>
+          Jeg brenner for å gjøre komplekse systemer enkle å bruke, og skaper
+          digitale produkter som er tilgjengelige, meningsfulle og teknisk
+          gjennomførbare. Enten jeg designer et dashboardsystem for investorer,
+          en app for utfordringsbaserte konkurranser, eller en nettside for en
+          startup, jobber jeg alltid helhetlig: fra innsikt og konseptutvikling,
+          til skisser, prototyper og implementering i kode. Jeg har erfaring fra både offentlig og privat sektor, inkludert
           prosjekter innen fintech, energi, reiseliv, retail og
-          SaaS-plattformer. I tverrfaglige team trives jeg godt – spesielt i
+          SaaS-plattformer. 
+        </p>
+        <p>
+          I tverrfaglige team trives jeg godt – spesielt i
           grensesnittet mellom design, utvikling og forretningsstrategi. Min
           tekniske forståelse gjør at jeg snakker samme språk som utviklerne, og
           mine visuelle ferdigheter sørger for at det som bygges også oppleves
-          godt. Verktøy som Figma, Webflow, Confluence og Jira er en naturlig
-          del av min hverdag, og jeg har grunnleggende frontend-erfaring med
-          HTML, CSS, React og JavaScript. Jeg jobber smidig, gjerne
-          hypotesedrevet, og legger stor vekt på universell utforming og
-          WCAG-standarder. Men først og fremst er jeg en designer som bryr meg –
-          om brukerne, teamet og det vi lager sammen.
+          godt.
+        </p>
+        <p>
+          Verktøy som Figma, Webflow, Confluence og Jira er en naturlig del av
+          min hverdag, og jeg har grunnleggende frontend-erfaring med HTML, CSS,
+          React og JavaScript. Jeg jobber smidig, gjerne hypotesedrevet, og
+          legger stor vekt på universell utforming og WCAG-standarder. Men først
+          og fremst er jeg en designer som bryr meg – om brukerne, teamet og det
+          vi lager sammen.
         </p>
       </section>
 
