Enhance back button styling and improve case study layout for better user experience

--- a/case-study.html
+++ b/case-study.html
@@ -11,7 +11,7 @@
 
     <header>
         <h1 id="case-title-header"></h1>
-        <a href="index.html">Tilbake til start</a>
+        <a class="back-button" href="index.html">Tilbake</a>
     </header>
 
     <main id="main-content">
