--- a/case-study.html
+++ b/case-study.html
@@ -31,5 +31,8 @@
         }
     </script>
 </div>
+<div id="lightbox" class="lightbox" onclick="closeLightbox()">
+    <img id="lightbox-img" src="" alt="Full-size image">
+</div>
 </body>
 </html>
