--- a/case-study.html
+++ b/case-study.html
@@ -32,7 +32,9 @@
     </script>
 </div>
 <div id="lightbox" class="lightbox" onclick="closeLightbox()">
+    <button class="lightbox-arrow left" onclick="navigateLightbox(-1); event.stopPropagation();">&#10094;</button>
     <img id="lightbox-img" src="" alt="Full-size image">
+    <button class="lightbox-arrow right" onclick="navigateLightbox(1); event.stopPropagation();">&#10095;</button>
 </div>
 </body>
 </html>
