--- a/case-study.html
+++ b/case-study.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Case Study</title>
+    <title id="document-title">Case Study</title>
     <link rel="stylesheet" href="./ux-portfolio/frontend/CSS/styles.css">
 </head>
 <body class="case-study-page">
