fjernet bindestrek i frontendutvikling

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             må spille på lag. Når det ser bra ut og fungerer sømløst, skapes
             løsninger folk faktisk vil bruke. Jeg har erfaring innen: grafisk
             design, interaksjonsdesign, UX-design, produktdesign og
-            frontend-utvikling.
+            frontendutvikling.
           </p>
         </section>
         <section class="case-studies" id="case-studies">
