--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </p>
         <p>
           Verktøy som Figma, Webflow, Confluence og Jira er en naturlig del av
-          min hverdag, og jeg har grunnleggende frontend-erfaring med HTML, CSS,
+          min hverdag, og jeg har grunnleggende frontenderfaring med HTML, CSS,
           React og JavaScript. Jeg jobber smidig, gjerne hypotesedrevet, og
           legger stor vekt på universell utforming og WCAG-standarder. Men først
           og fremst er jeg en designer som bryr meg – om brukerne, teamet og det
